setup-catalog/eks-setup/ligo-app/eks/ingress/ingress-aws-lb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ligo-ingress
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    # alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /chat
        pathType: Prefix
        backend:
          service:
            name: chat-nodeport-service
            port:
              number: 8083
      - path: /chat/ws
        pathType: Prefix
        backend:
          service:
            name: chat-nodeport-service
            port:
              number: 8083
      - path: /actuator/prometheus
        pathType: Prefix
        backend:
          service:
            name: chat-nodeport-service
            port:
              number: 8083
      - path: /actuator/prometheus
        pathType: Prefix
        backend:
          service:
            name: trans-nodeport-service
            port:
              number: 8089
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-nodeport-service
            port:
              number: 3000
      - path: /kafka-ui
        pathType: Prefix
        backend:
          service:
            name: kafka-ui-nodeport-service
            port:
              number: 8091
