setup-catalog/eks-setup/ligo-app/eks/ingress/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ligo-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /chat(/?)(.*)
        pathType: Prefix
        backend:
          service:
            name: chat-nodeport-service
            port:
              number: 8083
      # - path: /(?!chat\b)(.*)
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: frontend-nodeport-service
      #       port:
      #         number: 3000
      # - path: /actuator/prometheus
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: chat-nodeport-service
      #       port:
      #         number: 8083
      - path: /trans(/?)(.*)
        pathType: Prefix
        backend:
          service:
            name: trans-nodeport-service
            port:
              number: 8089
      - path: /(dashboard)(.*)
        pathType: Prefix
        backend:
          service:
            name: frontend-nodeport-service
            port:
              number: 3000
      - path: /kafka-ui(/?)(.*)
        pathType: Prefix
        backend:
          service:
            name: kafka-ui-nodeport-service
            port:
              number: 8091
